<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/start2"
    android:orientation="vertical"
    tools:context="com.example.journal.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="155dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="210dp"
            android:layout_height="151dp"
            android:layout_marginTop="38dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@mipmap/icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="#00472918"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="#FDFFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:fontFamily="sans-serif-light" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="#00FFFFFF" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="textMultiLine" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#00FFFFFF" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:hint="@string/password"
        android:inputType="textWebPassword" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:background="#00FFFFFF" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Material.Button.Toggle"
        android:layout_width="126dp"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:background="#626AC4"
        android:ellipsize="none"
        android:text="@string/enter"
        android:textColor="#FFFFFF" />

</LinearLayout>